--- a/src/pages/admin/components/right-header/right-header.css
+++ b/src/pages/admin/components/right-header/right-header.css
@@ -1,30 +1,30 @@
 .header {
-    background-color: #fff;
-    height: 64px;
-    padding: 0;
-    position: relative;
+	background-color: #fff;
+	height: 64px;
+	padding: 0;
+	position: relative;
 }
 
 .header .trigger {
-    font-size: 18px;
-    line-height: 64px;
-    padding: 0 20px;
-    position: absolute;
+	font-size: 18px;
+	line-height: 64px;
+	padding: 0 20px;
+	position: absolute;
 }
 
 .header .navbar-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 30px 0 70px
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0 30px 0 70px;
 }
 
-.exit-btn{
-    margin-left: 30px;
+.exit-btn {
+	margin-left: 30px;
 }
 
-.header .navbar-header .navbar-brand{
-    color: #333;
-    font-size: 20px;
-    font-weight: bold;
+.header .navbar-header .navbar-brand {
+	color: #333;
+	font-size: 20px;
+	font-weight: bold;
 }
