--- a/src/pages/notFound/not-found.css
+++ b/src/pages/notFound/not-found.css
@@ -1,7 +1,7 @@
-.not-found{
-    width: 100%;
-    height: 100%;
-    background: url("./images/404.jpg") no-repeat center;
-    text-align: center;
-    padding-top: 550px;
+.not-found {
+	width: 100%;
+	height: 100%;
+	background: url('./images/404.jpg') no-repeat center;
+	text-align: center;
+	padding-top: 550px;
 }
